Found and fix strange bug (in last commit) which was causing page render to jank and flicker after scrolling to a particular section of page.

--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -157,7 +157,7 @@
       box-shadow: 0 0.5rem 1.75rem rgba(0, 0, 0, 0.35);
       line-height: 2.15rem;
       border-radius: 1.25rem;
-      background: linear-gradient(to bottom, $theme-primary-v5, $theme-primary-v3);
+      background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
       color: white;
       padding: 2.5rem;
 
